--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -37,14 +37,14 @@ jobs:
         sudo -E apt-get -qq update
         sudo -E apt-get -qq install git subversion git-core wget
         sudo timedatectl set-timezone "$TZ"
-        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
+        git config --local user.name "actions"
+        git config --local user.email "action@github.com"
         
     - name: Clone packages
       run: |
         cd $GITHUB_WORKSPACE
         chmod +x ${{matrix.target}}.sh
-        git clone -b ${{matrix.target}} https://github.com/liuran001/openwrt-packages.git ${{matrix.target}}
+        git clone -b ${{matrix.target}} https://github.com/${{ github.repository }} ${{matrix.target}}
         cd ${{matrix.target}}
         rm -Rf *
         git rm --cache *
@@ -58,8 +58,9 @@ jobs:
         [ -e $GITHUB_WORKSPACE/README.md ] && cp $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/${{matrix.target}}
         cd $GITHUB_WORKSPACE/${{matrix.target}}
         git add .
-        git commit -m "update$(TZ='Asia/Shanghai' date +@%Y%m%d)"
-        git push --quiet "https://${{ secrets.TOKEN }}@github.com/liuran001/openwrt-packages.git" HEAD:${{matrix.target}}
+        git commit -m "${{ env.RELEASE_NAME }}"
+        git remote set-url --add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
+        git push -u -f origin master
  
 
  
