--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -57,6 +57,9 @@ jobs:
         [ -e $GITHUB_WORKSPACE/LICENSE ] && cp $GITHUB_WORKSPACE/LICENSE $GITHUB_WORKSPACE/${{matrix.target}}
         [ -e $GITHUB_WORKSPACE/README.md ] && cp $GITHUB_WORKSPACE/README.md $GITHUB_WORKSPACE/${{matrix.target}}
         cd $GITHUB_WORKSPACE/${{matrix.target}}
+        sed -i '/url =/d' ./.git/config
+        git config --local user.name "actions"
+        git config --local user.email "action@github.com"
         git add .
         git commit -m "${{ env.RELEASE_NAME }}"
         git remote set-url --add origin "https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}"
